--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -1,4 +1,4 @@
 /* client/src/Login.css */
 .login-button:hover {
-    background-color: #e07b00; /* Darker orange on hover */
-  }
+  background-color: #A04763; /* Darker shade of #B85170 on hover */
+}
