--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,7 +65,7 @@
 }
 
 .App-link {
-  color: #FF95A3; /* Changed from #61dafb to secondary color */
+  color: #B85170; /* Changed from #61dafb to secondary color */
 }
 
 @keyframes App-logo-spin {
