--- a/client/src/Dashboard.css
+++ b/client/src/Dashboard.css
@@ -55,7 +55,7 @@ body {
 }
 
 .nav a:hover {
-  color: #FF95A3; /* Changed hover to secondary color */
+  color: #B85170; /* Changed hover to secondary color */
   text-decoration: underline;
 }
 
